--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "otp-generator": "^4.0.1",
+    "twilio": "^5.1.1"
   }
 }
