--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "moment": "^2.30.1",
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "razorpay": "^2.9.4",
+    "uuid": "^10.0.0"
   }
 }
