--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,9 @@
         } 
     ],
     "routes": [ 
-        { "src": "/ecomm/api/v1/(.*)", "dest": "/ecomm/api/v1/$1" }
+        {
+          "src": "/(.*)",
+          "dest": "/index.js"
+        }
     ]
 }
